crates/dipa-derive-test/src/all_tests/ui/max_delta_batch_too_small.rs
use dipa_derive::DiffPatch;

#[derive(DiffPatch)]
#[dipa(max_fields_per_batch = 1)]
struct Foo;

fn main() {}
